# concurrent

./: .gitignore  CMakeLists.txt  README.md  SETUP_GITHUB.md
include/: concurrent_list.h  list.h
src/: concurrent_list.c  list.c  main.c  test_list.c
